--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,10 +2,12 @@
 
 <html>
   <head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>Torchy's Haberdashery</title>
   </head>
   <body>
-    <h1>hello world</h1>
     <div id='app'></div>
   </body>
 
