--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <title>Torchy's Haberdashery</title>
+    <!-- Linking Font, Font Icons,  -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
     <h1>hello world</h1>
